--- a/selection/notebooks/selectGalaxies.ipynb
+++ b/selection/notebooks/selectGalaxies.ipynb
@@ -64,8 +64,8 @@
    "source": [
     "import h5py\n",
     "\n",
-    "#path   = '/data/des81.b/data/mariaeli/y3_buzz/Buzzard-3_v2.0_Y3a_mastercat/'\n",
-    "path   = '/data/des81.b/data/mariaeli/y3_cats/subsampled/'\n",
+    "# path   = '/data/des81.b/data/mariaeli/y3_buzz/Buzzard-3_v2.0_Y3a_mastercat/'\n",
+    "path   = '/data/des81.b/data/mariaeli/y3_cats/full/'\n",
     "fname  =     path+'Y3_GOLD_2_2.1_subsampled.h5'\n",
     "fname_aux  = path+'Y3_GOLD_2_2.1_DNF_subsampled.h5'\n",
     "\n",
@@ -75,25 +75,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Y3_GOLD_2_2.1_BPZ_subsampled.h5\r\n",
-      "Y3_GOLD_2_2.1_DNF_subsampled.h5\r\n",
-      "Y3_GOLD_2_2_1_maps.h5\r\n",
-      "Y3_GOLD_2_2.1_subsampled.h5\r\n",
-      "y3_gold_2.2.1_wide_sofcol_run_redmapper_v6.4.22_wv1.2_subsampled.h5\r\n",
-      "Y3_mastercat_6_15_19_subsampled.h5\r\n",
-      "y3v02-mcal-003-v1_subsampled.h5\r\n"
+      "nohup1.out\r\n",
+      "nohup2.out\r\n",
+      "\u001b[0m\u001b[38;5;34msompz_v0.40_08_04_2020.h5\u001b[0m*\r\n",
+      "Y3_GOLD_2_2.1_12_3_19.h5\r\n",
+      "Y3_GOLD_2_2.1_BPZ_12_3_19.h5\r\n",
+      "Y3_GOLD_2_2.1_DNF_12_3_19.h5\r\n",
+      "Y3_GOLD_2_2_1_maps_12_3_19.h5\r\n",
+      "Y3_GOLD_2_2_1_regions.h5\r\n",
+      "y3_gold_2.2.1_wide_sofcol_run_redmapper_v0.5.1_redmagic_12_3_19.h5\r\n",
+      "Y3_mastercat_03_31_20.h5\r\n",
+      "y3v02-mcal-004-v3_03_16_20.h5\r\n"
      ]
     }
    ],
    "source": [
-    "ls /data/des81.b/data/mariaeli/y3_cats/subsampled"
+    "ls /data/des81.b/data/mariaeli/y3_cats/full/"
    ]
   },
   {
@@ -357,21 +361,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Healpix map\n",
     "Nside    = 8\n",
     "outdir   = '../data/'\n",
-    "hpx_file = outdir+'/hpxmap_nside%i_subsampled.fits'%Nside"
+    "hpx_file = outdir+'/hpxmap_nside%i_full.fits'%Nside"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Table' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-f2f0f7afae63>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mhpx_map\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgetdata\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhpx_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mtiles\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhpx_map\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'hpx_pixel'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhpx_map\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'hpx_value'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Table' is not defined"
+     ]
+    }
+   ],
    "source": [
     "hpx_map = Table(getdata(hpx_file))\n",
     "tiles = np.array(hpx_map['hpx_pixel'][(hpx_map['hpx_value']>0)])-1"
@@ -379,19 +395,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([  0,   2, 256, 257, 259, 260, 261, 262, 263, 269, 271, 272, 273,\n",
-       "       274, 275, 276, 277, 278, 279])"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'tiles' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-62a6d8e930d6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtiles\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'tiles' is not defined"
+     ]
     }
    ],
    "source": [
@@ -920,7 +936,7 @@
    "outputs": [],
    "source": [
     "outdir = '/data/des61.a/data/johnny/DESY3/data/cutouts/'\n",
-    "outfile_base = outdir+'y3_gold_2.2.1_wide_sofcol_run_redmapper_v6.4.22_wv1.2_subsampled_hpx8_{}.hdf'"
+    "outfile_base = outdir+'y3_gold_2.2.1_wide_sofcol_run_redmapper_v6.4.22_wv1.2_subsampled_hpx8_{:05d}.hdf5'"
    ]
   },
   {
@@ -1575,7 +1591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1585,7 +1601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1608,6 +1624,36 @@
     "d_zt   = dnf[u'Z'][:][:]\n",
     "d_zerr = dnf[u'DNF_ZSIGMA_SOF'][:][:]\n",
     "d_indices = dnf[u'indices'][:][:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "indexes.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.15938795, 0.07803585, 0.87201279, ..., 0.07347524, 0.01090671,\n",
+       "       0.14543739])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d_zerr"
    ]
   },
   {
