--- a/selection/notebooks/photozValidation.ipynb
+++ b/selection/notebooks/photozValidation.ipynb
@@ -43,16 +43,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GSCHWEND.SPECZ_Y3_GOLD_2_2_27JUN19.pdf\r\n",
-      "match2.csv\r\n",
-      "match.csv\r\n",
-      "query.sql\r\n",
-      "readme.txt\r\n",
-      "spec_y3_gold_2_2_27JUN19.fits\r\n",
-      "spec_y3_gold_2_2_27JUN19_photoz2.fits\r\n",
-      "spec_y3_gold_2_2_27JUN19_photoz.fits\r\n",
-      "y3a2_spec_dered_small_nopointsources.fits\r\n",
-      "y3a2_specz_sample.html\r\n"
+      "GSCHWEND.SPECZ_Y3_GOLD_2_2_27JUN19.pdf\n",
+      "match2.csv\n",
+      "match.csv\n",
+      "query.sql\n",
+      "readme.txt\n",
+      "spec_y3_gold_2_2_27JUN19.fits\n",
+      "spec_y3_gold_2_2_27JUN19_photoz2.fits\n",
+      "spec_y3_gold_2_2_27JUN19_photoz.fits\n",
+      "y3a2_spec_dered_small_nopointsources.fits\n",
+      "y3a2_specz_sample.html\n"
      ]
     }
    ],
@@ -1285,30 +1285,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "#z   ,bias  ,sigma ,zlow ,zhigh, outlierFrac  \r\n",
-      "0.100,0.000,0.009,0.000,0.000,0.160\r\n",
-      "0.125,0.000,0.011,0.000,0.000,0.136\r\n",
-      "0.150,0.000,0.018,0.000,0.000,0.113\r\n",
-      "0.175,0.000,0.018,0.000,0.000,0.106\r\n",
-      "0.200,0.000,0.022,0.000,0.000,0.131\r\n",
-      "0.225,0.000,0.016,0.000,0.000,0.136\r\n",
-      "0.250,0.000,0.017,0.000,0.000,0.130\r\n",
-      "0.275,0.000,0.023,0.000,0.000,0.133\r\n",
-      "0.300,0.000,0.037,0.000,0.000,0.119\r\n",
-      "0.325,0.000,0.027,0.000,0.000,0.127\r\n",
-      "0.350,0.000,0.021,0.000,0.000,0.135\r\n",
-      "0.375,0.000,0.019,0.000,0.000,0.129\r\n",
-      "0.400,0.000,0.021,0.000,0.000,0.106\r\n",
-      "0.425,0.000,0.019,0.000,0.000,0.075\r\n",
-      "0.450,0.000,0.015,0.000,0.000,0.082\r\n",
-      "0.475,0.000,0.011,0.000,0.000,0.082\r\n",
-      "0.500,0.000,0.013,0.000,0.000,0.064\r\n",
-      "0.525,-0.000,0.014,0.000,0.000,0.051\r\n",
-      "0.550,-0.000,0.014,0.000,0.000,0.064\r\n",
-      "0.575,0.000,0.013,0.000,0.000,0.073\r\n",
-      "0.600,0.000,0.015,0.000,0.000,0.077\r\n",
-      "0.625,0.000,0.019,0.000,0.000,0.075\r\n",
-      "0.650,0.000,0.021,0.000,0.000,0.072\r\n"
+      "#z   ,bias  ,sigma ,zlow ,zhigh, outlierFrac  \n",
+      "0.100,0.000,0.009,0.000,0.000,0.160\n",
+      "0.125,0.000,0.011,0.000,0.000,0.136\n",
+      "0.150,0.000,0.018,0.000,0.000,0.113\n",
+      "0.175,0.000,0.018,0.000,0.000,0.106\n",
+      "0.200,0.000,0.022,0.000,0.000,0.131\n",
+      "0.225,0.000,0.016,0.000,0.000,0.136\n",
+      "0.250,0.000,0.017,0.000,0.000,0.130\n",
+      "0.275,0.000,0.023,0.000,0.000,0.133\n",
+      "0.300,0.000,0.037,0.000,0.000,0.119\n",
+      "0.325,0.000,0.027,0.000,0.000,0.127\n",
+      "0.350,0.000,0.021,0.000,0.000,0.135\n",
+      "0.375,0.000,0.019,0.000,0.000,0.129\n",
+      "0.400,0.000,0.021,0.000,0.000,0.106\n",
+      "0.425,0.000,0.019,0.000,0.000,0.075\n",
+      "0.450,0.000,0.015,0.000,0.000,0.082\n",
+      "0.475,0.000,0.011,0.000,0.000,0.082\n",
+      "0.500,0.000,0.013,0.000,0.000,0.064\n",
+      "0.525,-0.000,0.014,0.000,0.000,0.051\n",
+      "0.550,-0.000,0.014,0.000,0.000,0.064\n",
+      "0.575,0.000,0.013,0.000,0.000,0.073\n",
+      "0.600,0.000,0.015,0.000,0.000,0.077\n",
+      "0.625,0.000,0.019,0.000,0.000,0.075\n",
+      "0.650,0.000,0.021,0.000,0.000,0.072\n"
      ]
     }
    ],
@@ -1482,7 +1482,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "version": "2.7.16"
   }
  },
  "nbformat": 4,
