pre-processing done

--- a/analysis/runs/prepareInputFiles.ipynb
+++ b/analysis/runs/prepareInputFiles.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -69,44 +69,20 @@
      "output_type": "stream",
      "text": [
       "master file: \n",
-      " /data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00017.hdf5\n",
-      "/data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00018.hdf5\n",
-      "/data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00019.hdf5\n",
-      "/data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00020.hdf5\n",
-      "/data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00022.hdf5\n",
-      "/data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00032.hdf5\n",
-      "/data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00033.hdf5\n",
-      "/data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00034.hdf5\n",
-      "/data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00035.hdf5\n",
-      "/data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00038.hdf5\n",
-      "/data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00044.hdf5\n",
-      "/data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00045.hdf5\n",
-      "/data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00046.hdf5\n",
-      "/data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00047.hdf5\n",
-      "outdir: /data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/\n",
-      "tile path: /data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles\n"
+      " /data/des61.a/data/johnny/Buzzard/Buzzard-3_v1.9.8_Y3a/output/tiles/buzzard_y3_v1.9.8_all_copa_000000.hdf5\n",
+      "/data/des61.a/data/johnny/Buzzard/Buzzard-3_v1.9.8_Y3a/output/tiles/buzzard_y3_v1.9.8_all_copa_000001.hdf5\n",
+      "/data/des61.a/data/johnny/Buzzard/Buzzard-3_v1.9.8_Y3a/output/tiles/buzzard_y3_v1.9.8_all_copa_000002.hdf5\n",
+      "/data/des61.a/data/johnny/Buzzard/Buzzard-3_v1.9.8_Y3a/output/tiles/buzzard_y3_v1.9.8_all_copa_000003.hdf5\n",
+      "outdir: /data/des61.a/data/johnny/Buzzard/Buzzard-3_v1.9.8_Y3a/output/\n",
+      "tile path: /data/des61.a/data/johnny/Buzzard/Buzzard-3_v1.9.8_Y3a/output/tiles\n"
      ]
     }
    ],
    "source": [
-    "root = '/home/s1/jesteves/git/buzzardAnalysis/mainAnalysis/'\n",
-    "cfg  = root+'config_buzzard_v2.yaml'\n",
+    "root = '/data/des61.a/data/johnny/DESY3/projects/buzzardAllHalos/CopacabanaRuns/analysis/'\n",
+    "cfg  = root+'cf_sub.yaml'\n",
     "copa = copacabana(cfg,dataset='buzzard_v2')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -124,53 +100,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
-   "source": [
-    "#copa.make_input_file()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "clusters                 Group\r\n",
-      "members                  Group\r\n"
+      "Running pre_processing_healpix() instead \n",
+      "\n",
+      "cluster columns\n",
+      "{'R200_true': 'R200', 'DEC': 'DEC', 'RA': 'RA', 'redshift': 'Z_COS', 'tile': 'hpx32', 'M200_true': 'M200', 'HALOID': 'haloid'}\n",
+      "tile : 0\n",
+      "counts: 282\n",
+      "Loading Data\n",
+      "cluster columns\n",
+      "infile: /data/des61.a/data/johnny/Buzzard/Buzzard-3_v1.9.8_Y3a/catalog/y3/buzzard_y3_v1.9.8_all_raw_hpx8_000000.hdf\n",
+      "{'R200_true': 'R200', 'DEC': 'DEC', 'RA': 'RA', 'redshift': 'Z_COS', 'tile': 'hpx32', 'M200_true': 'M200', 'HALOID': 'haloid'}\n",
+      "tile : 3\n",
+      "counts: 227\n",
+      "Loading Data\n",
+      "infile: /data/des61.a/data/johnny/Buzzard/Buzzard-3_v1.9.8_Y3a/catalog/y3/buzzard_y3_v1.9.8_all_raw_hpx8_000003.hdf\n",
+      "cluster columns\n",
+      "{'R200_true': 'R200', 'DEC': 'DEC', 'RA': 'RA', 'redshift': 'Z_COS', 'tile': 'hpx32', 'M200_true': 'M200', 'HALOID': 'haloid'}\n",
+      "tile : 2\n",
+      "counts: 382\n",
+      "cluster columns\n",
+      "{'R200_true': 'R200', 'DEC': 'DEC', 'RA': 'RA', 'redshift': 'Z_COS', 'tile': 'hpx32', 'M200_true': 'M200', 'HALOID': 'haloid'}\n",
+      "tile : 1\n",
+      "counts: 11\n",
+      "Loading Data\n",
+      "infile: /data/des61.a/data/johnny/Buzzard/Buzzard-3_v1.9.8_Y3a/catalog/y3/buzzard_y3_v1.9.8_all_raw_hpx8_000002.hdf\n",
+      "Loading Data\n",
+      "infile: /data/des61.a/data/johnny/Buzzard/Buzzard-3_v1.9.8_Y3a/catalog/y3/buzzard_y3_v1.9.8_all_raw_hpx8_000001.hdf\n",
+      "ngals : 6.15e+05\n",
+      "ngals : 3.67e+05\n",
+      "ngals : 7.77e+05\n",
+      "ngals : 1.06e+06\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/s1/jesteves/git/ccopa/python/make_input_files/pre_processing_copa.py:305: UserWarning: Multiprocessing-backed parallel loops cannot be nested, setting n_jobs=1\n",
+      "  npoints=npoints) for i in range(len(keys)))\n",
+      "/home/s1/jesteves/git/ccopa/python/make_input_files/pre_processing_copa.py:305: UserWarning: Multiprocessing-backed parallel loops cannot be nested, setting n_jobs=1\n",
+      "  npoints=npoints) for i in range(len(keys)))\n",
+      "/home/s1/jesteves/git/ccopa/python/make_input_files/pre_processing_copa.py:305: UserWarning: Multiprocessing-backed parallel loops cannot be nested, setting n_jobs=1\n",
+      "  npoints=npoints) for i in range(len(keys)))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing Master File\n",
+      "Partial time: 12.39 s \n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/s1/jesteves/git/ccopa/python/make_input_files/pre_processing_copa.py:305: UserWarning: Multiprocessing-backed parallel loops cannot be nested, setting n_jobs=1\n",
+      "  npoints=npoints) for i in range(len(keys)))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing Master File\n",
+      "Partial time: 256.20 s \n",
+      "\n",
+      "Writing Master File\n",
+      "Partial time: 309.38 s \n",
+      "\n",
+      "Writing Master File\n",
+      "Partial time: 475.76 s \n",
+      "\n"
      ]
     }
    ],
+   "source": [
+    "copa.make_input_file()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "!h5ls /data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00033.hdf5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CID                      Dataset {424}\r\n",
-      "DA                       Dataset {424}\r\n",
-      "DEC                      Dataset {424}\r\n",
-      "M200_true                Dataset {424}\r\n",
-      "R200_true                Dataset {424}\r\n",
-      "RA                       Dataset {424}\r\n",
-      "magLim                   Dataset {424, 3}\r\n",
-      "redshift                 Dataset {424}\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!h5ls /data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00033.hdf5/clusters/main"
    ]
@@ -185,35 +232,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bkg                      Dataset {10230616}\r\n",
-      "CID                      Dataset {10230616}\r\n",
-      "DEC                      Dataset {10230616}\r\n",
-      "GID                      Dataset {10230616}\r\n",
-      "HALOID                   Dataset {10230616}\r\n",
-      "Mr                       Dataset {10230616}\r\n",
-      "R                        Dataset {10230616}\r\n",
-      "RA                       Dataset {10230616}\r\n",
-      "True                     Dataset {10230616}\r\n",
-      "dmag                     Dataset {10230616}\r\n",
-      "mag                      Dataset {10230616, 4}\r\n",
-      "magerr                   Dataset {10230616, 4}\r\n",
-      "mid                      Dataset {10230616}\r\n",
-      "pz0                      Dataset {10230616}\r\n",
-      "redshift                 Dataset {10230616}\r\n",
-      "z                        Dataset {10230616}\r\n",
-      "z_true                   Dataset {10230616}\r\n",
-      "zerr                     Dataset {10230616}\r\n",
-      "zoffset                  Dataset {10230616}\r\n"
+      "block2_items             Dataset {3}\r\n",
+      "    Data:\r\n",
+      "        (0) \"id\", \"haloid\", \"coadd_object_id\"\r\n"
      ]
     }
    ],
+   "source": [
+    "!h5ls -d /data/des61.a/data/johnny/Buzzard/Buzzard-3_v1.9.8_Y3a/catalog/y3/buzzard_y3_v1.9.8_all_raw_hpx8_000001.hdf/members/block2_items"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "!h5ls /data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00033.hdf5/members/main"
    ]
@@ -1022,18 +1062,6 @@
    "display_name": "Python 2",
    "language": "python",
    "name": "python2"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
   }
  },
  "nbformat": 4,
