--- a/analysis/runs/prepareInputFiles.ipynb
+++ b/analysis/runs/prepareInputFiles.ipynb
@@ -239,9 +239,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "block2_items             Dataset {3}\r\n",
-      "    Data:\r\n",
-      "        (0) \"id\", \"haloid\", \"coadd_object_id\"\r\n"
+      "block2_items             Dataset {3}\n",
+      "    Data:\n",
+      "        (0) \"id\", \"haloid\", \"coadd_object_id\"\n"
      ]
     }
    ],
@@ -1066,23 +1066,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "NERSC Python",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
